# uv_offline_test

./: .gitignore  extra.just  justfile  pyproject.toml  readme.md
src/uv_offline_test/: __init__.py
tests/: test_me.py
