[project]
name = "uv_offline_test"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
